# jammanbot

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  RUNBOOK.md  pyproject.toml  render.yaml
scripts/: install-wsl.sh  run-wsl-tmux.sh  smoke-codex.sh  update-menu-cache.py
slack/: app-manifest.yml
src/jammanbot/: app.py  cafeteria.py  codex_bridge.py  config.py  db.py  gemini_client.py  link_summary.py  lunchlog_agent.py  menu_cache.py  prompts.py  slack_bot.py  web_app.py
src/jammanbot/data/: menu-cache.json
src/jammanbot/web/: index.html
src/jammanbot/web/static/: app.js  styles.css
tests/: test_cafeteria.py  test_db.py  test_link_summary.py  test_lunchlog_agent.py  test_slack_intents.py  test_web_app.py
