[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jammanbot"
version = "0.1.0"
description = "Local Codex-powered Slack thread catch-up bot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "slack-bolt>=1.20.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
jammanbot = "jammanbot.app:main"
jammanbot-web = "jammanbot.web_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jammanbot = ["web/index.html", "web/static/*"]
